--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -53,9 +53,7 @@ jobs:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
           HUGO_ENVIRONMENT: production
         run: |
-          hugo build \
-            --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+          hugo build --baseURL "${{ steps.pages.outputs.base_url }}"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
