Add recent posts section to various pages and update footer path

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -194,7 +194,7 @@ params:
 
   footer:
     recentPosts:
-      path: "ausgaben"
+      path: "blog"
       count: 3
       title: "Aktuelle Posts"
       enable: true
